--- a/docs/207/207toc.md
+++ b/docs/207/207toc.md
@@ -2,9 +2,8 @@
 
 [Lab Safety](lab_0.md)
 
-[Lab 1 - Blood](lab_1.md)<ul>
-[student lab report 1](./lab%20reports/Lab_1_report.pdf)
-</ul>
+[Lab 1 - Blood](lab_1.md)
++ [student lab report 1](./lab%20reports/Lab_1_report.pdf)
 
 [Lab 2 - Anatomy of the heart](./lab_2.md)<ul>
 [student lab report 2](./lab%20reports/Lab_2_report.pdf)
