--- a/docs/207/207toc.md
+++ b/docs/207/207toc.md
@@ -5,42 +5,32 @@
 [Lab 1 - Blood](lab_1.md)
 + [student lab report 1](./lab%20reports/Lab_1_report.pdf)
 
-[Lab 2 - Anatomy of the heart](./lab_2.md)<ul>
-[student lab report 2](./lab%20reports/Lab_2_report.pdf)
-</ul>
+[Lab 2 - Anatomy of the heart](./lab_2.md)
++ [student lab report 2](./lab%20reports/Lab_2_report.pdf)
 
-[Lab 3 - Physiology of the heart](lab_3.md)<ul>
-[LabChart Student Quick Reference](./additional_files/Lab%203%20-%20LabChart_student_quick_reference.pdf)
-</ul>
+[Lab 3 - Physiology of the heart](lab_3.md)
++[LabChart Student Quick Reference](./additional_files/Lab%203%20-%20LabChart_student_quick_reference.pdf)
 
-[Lab 4 - Enzyme Linked Immunoabsorbant Assay](lab_4.md)<ul>
-[student lab report 4](./lab%20reports/Lab_4_report.pdf)
-</ul>
+[Lab 4 - Enzyme Linked Immunoabsorbant Assay](lab_4.md)
++ [student lab report 4](./lab%20reports/Lab_4_report.pdf)
 
-[Lab 5 - Organ Systems](lab_5.md)<ul>
-[student lab report 5](./lab%20reports/Lab_5_report.pdf)
-</ul>
+[Lab 5 - Organ Systems](lab_5.md)
++ [student lab report 5](./lab%20reports/Lab_5_report.pdf)
 
-[Lab 6 - Spirometry](lab_6.md)<ul>
-[student lab report 6](./lab%20reports/Lab_6_report.pdf)
-</ul>
+[Lab 6 - Spirometry](lab_6.md)
++ [student lab report 6](./lab%20reports/Lab_6_report.pdf)
 
-[Lab 7 - Carbohydrate Biochemistry](lab_7.md)<ul>
-[student lab report 7](./lab%20reports/Lab_7_report.pdf)
-</ul>
+[Lab 7 - Carbohydrate Biochemistry](lab_7.md)
++ [student lab report 7](./lab%20reports/Lab_7_report.pdf)
 
-[Lab 18 - Diffusion and Osmosis](lab_8.md)<ul>
-[student lab report 8](./lab%20reports/Lab_8_report.pdf)
-</ul>
+[Lab 18 - Diffusion and Osmosis](lab_8.md)
++ [student lab report 8](./lab%20reports/Lab_8_report.pdf)
 
-[Lab 9 - Kidney and Urine Analysis](lab_9.md)<ul>
-[student lab report 9](./lab%20reports/Lab_9_report.pdf)
-</ul>
+[Lab 9 - Kidney and Urine Analysis](lab_9.md)
++ [student lab report 9](./lab%20reports/Lab_9_report.pdf)
 
-[Lab 10 - Metabolism - Caloric Budget](lab_10.md)<ul>
-[student lab report 10](./lab%20reports/Lab_10_report.pdf)
-</ul>
+[Lab 10 - Metabolism - Caloric Budget](lab_10.md)
++ [student lab report 10](./lab%20reports/Lab_10_report.pdf)
 
-[Lab 11 - Reproductive System](lab_11.md)<ul>
-[student lab report 11](./lab%20reports/Lab_11_report.pdf)
-</ul>
+[Lab 11 - Reproductive System](lab_11.md)
++ [student lab report 11](./lab%20reports/Lab_11_report.pdf)
