now with chalkboard?

--- a/docs/revealTest/testPresentation.qmd
+++ b/docs/revealTest/testPresentation.qmd
@@ -2,8 +2,8 @@
 title: "TestPresentation"
 format: 
   revealjs:
+    chalkboard: true
     plugins: 
-      - chalkboard
       - multiplex
     multiplex:
       url: 'https://reveal-multiplex.glitch.me'  # The URL of your socket.io server
