--- a/docs/revealTest/testPresentation.qmd
+++ b/docs/revealTest/testPresentation.qmd
@@ -3,13 +3,7 @@ title: "TestPresentation"
 format: 
   revealjs:
     chalkboard: true
-    plugins: 
-      - multiplex
-    multiplex:
-      url: 'https://reveal-multiplex.glitch.me'  # The URL of your socket.io server
-      id: 'fea2aa52140b5c99'
-      secret: '17236656801768824289'
-      key: '9a8b7c6d5e4f3g2h1i0j1k2l3m4n5o6p'
+    multiplex: true
 ---
 
 ## Quarto
