--- a/docs/206/206toc.md
+++ b/docs/206/206toc.md
@@ -6,6 +6,8 @@
 + [student lab report 1](./lab_reports/Lab_1_report.pdf)
 
 [Lab 2 - Skeleton Axial](./lab_2.md)
+
 + [student lab report 2](./lab_reports/Lab_2_report.pdf)
 
+[Lab 3 - Skeleton Upper Appendicular]](./lab_3.md)
 
