--- a/docs/206/206toc.md
+++ b/docs/206/206toc.md
@@ -9,5 +9,6 @@
 + [student lab report 2](./lab_reports/Lab_2_report.pdf)
 
 [Lab 3 - Skeleton Upper Appendicular](./lab_3.md)
++ [student lab report 3](./lab_reports/Lab_3_report.pdf)
 
 [Lab 4 - Skeleton Upper Appendicular](./lab_4.md)
