--- a/docs/206/206toc.md
+++ b/docs/206/206toc.md
@@ -13,3 +13,6 @@
 
 [Lab 4 - Skeleton Upper Appendicular](./lab_4.md)
 + [student lab report 4](./lab_reports/Lab_4_report.pdf)
+
+[Lab 5 - Axial Muscles](./lab_5.md)
++ [student lab report 5](./lab_reports/Lab_5_report.pdf)
