--- a/docs/206/206toc.md
+++ b/docs/206/206toc.md
@@ -16,3 +16,7 @@
 
 [Lab 5 - Axial Muscles](./lab_5.md)
 + [student lab report 5](./lab_reports/Lab_5_report.pdf)
+
+[Lab 6 - Muscles of the Pectoral Girdle](./lab_6.md)
+
+[Lab 7 - Muscles of the Pelvic Girdle](./lab_7.md)
