--- a/docs/206/206toc.md
+++ b/docs/206/206toc.md
@@ -11,7 +11,7 @@
 [Lab 3 - Skeleton Upper Appendicular](./lab_3.md)
 + [student lab report 3](./lab_reports/Lab_3_report.pdf)
 
-[Lab 4 - Skeleton Upper Appendicular](./lab_4.md)
+[Lab 4 - Skeleton Lower Appendicular](./lab_4.md)
 + [student lab report 4](./lab_reports/Lab_4_report.pdf)
 
 [Lab 5 - Axial Muscles](./lab_5.md)
