--- a/docs/206/206toc.md
+++ b/docs/206/206toc.md
@@ -18,5 +18,7 @@
 + [student lab report 5](./lab_reports/Lab_5_report.pdf)
 
 [Lab 6 - Muscles of the Pectoral Girdle](./lab_6.md)
++ [student lab report 5](./lab_reports/Lab_6_report.pdf)
 
 [Lab 7 - Muscles of the Pelvic Girdle](./lab_7.md)
++ [student lab report 5](./lab_reports/Lab_7_report.pdf)
