finished emg lab and lab report

--- a/docs/206/206toc.md
+++ b/docs/206/206toc.md
@@ -22,3 +22,6 @@
 
 [Lab 7 - Muscles of the Pelvic Girdle](./lab_7.md)
 + [student lab report 5](./lab_reports/Lab_7_report.pdf)
+
+[EMG Demonstration Lab](./EMG.md)
++ [student lab report EMG](./lab_reports/Lab_report_emg.pdf)
