--- a/docs/206/206toc.md
+++ b/docs/206/206toc.md
@@ -25,3 +25,5 @@
 
 [EMG Demonstration Lab](./EMG.md)
 + [student lab report EMG](./lab_reports/Lab_report_emg.pdf)
+
+[Lab 8 - Brain and Cranial Nerves](./lab_8.md)
