made lab 9 special senses

--- a/docs/206/206toc.md
+++ b/docs/206/206toc.md
@@ -27,3 +27,5 @@
 + [student lab report EMG](./lab_reports/Lab_report_emg.pdf)
 
 [Lab 8 - Brain and Cranial Nerves](./lab_8.md)
+
+[Lab 9 - Special Senses](./lab_9.md)
