--- a/docs/207/207toc.md
+++ b/docs/207/207toc.md
@@ -2,35 +2,34 @@
 
 [Lab Safety](lab_0.md)
 
-[Lab 1 - Anatomy of the heart](./lab_2.md)
-+ [student lab report 2](./lab%20reports/Lab_2_report.pdf)
+[Lab 1 - Anatomy of the heart](./lab_1_Heart_Anatomy.md)
++ [student lab report 1](./lab%20reports/Lab_1_report.pdf)
 
-[Lab 2 - Physiology of the heart](lab_3.md)
-+ [LabChart Student Quick Reference](./additional_files/Lab%203%20-%20LabChart_student_quick_reference.pdf)
+[Lab 2 - Physiology of the heart](lab_2_Heart_Physiology.md)
 
 [lab 3 - Blood vessels]
 
-[Lab 4 - Blood](lab_1.md)
-+ [student lab report 1](./lab%20reports/Lab_1_report.pdf)
-
-[Lab 5 - Diffusion and Osmosis](lab_8.md)
-+ [student lab report 8](./lab%20reports/Lab_8_report.pdf)
-
-[Lab 6 - Enzyme Linked Immunoabsorbant Assay](lab_4.md)
+[Lab 4 - Blood](lab_4_Blood.md)
 + [student lab report 4](./lab%20reports/Lab_4_report.pdf)
-  
-[Lab 7 - Spirometry](lab_6.md)
-+ [student lab report 6](./lab%20reports/Lab_6_report.pdf)
 
-[Lab 8 - Metabolism - Caloric Budget](lab_10.md)
-+ [student lab report 10](./lab%20reports/Lab_10_report.pdf)
-
-[Lab 9 - Organ Systems](lab_5.md)
+[Lab 5 - Diffusion and Osmosis](lab_5_Diffusion.md)
 + [student lab report 5](./lab%20reports/Lab_5_report.pdf)
 
-[Lab 10 - Carbohydrate Biochemistry](lab_7.md)
+[Lab 6 - Enzyme Linked Immunoabsorbant Assay](lab_6_Immune_System.md)
++ [student lab report 6](./lab%20reports/Lab_6_report.pdf)
+  
+[Lab 7 - Spirometry](lab_7_Spirometry.md)
 + [student lab report 7](./lab%20reports/Lab_7_report.pdf)
 
-[Lab 11 - Kidney and Urine Analysis](lab_9.md)
+[Lab 8 - Metabolism - Caloric Budget](lab_8_Metabolism.md)
++ [student lab report 8](./lab%20reports/Lab_8_report.pdf)
+
+[Lab 9 - Organ Systems](lab_9_Organ_System.md)
 + [student lab report 9](./lab%20reports/Lab_9_report.pdf)
+
+[Lab 10 - Carbohydrate Biochemistry](lab_10_Carbohydrate_Biochem.md)
++ [student lab report 10](./lab%20reports/Lab_10_report.pdf)
+
+[Lab 11 - Kidney and Urine Analysis](lab_11_Kidney.md)
++ [student lab report 11](./lab%20reports/Lab_11_report.pdf)
 
