--- a/docs/207/207toc.md
+++ b/docs/207/207toc.md
@@ -24,7 +24,7 @@
 [Lab 8 - Metabolism - Caloric Budget](lab_8_Metabolism.md)
 + [student lab report 8](./lab%20reports/Lab_8_report.pdf)
 
-[Lab 9 - Organ Systems](lab_9_Organ_System.md)
+[Lab 9 - Organ Systems](lab_9_Organ_Systems.md)
 + [student lab report 9](./lab%20reports/Lab_9_report.pdf)
 
 [Lab 10 - Carbohydrate Biochemistry](lab_10_Carbohydrate_Biochem.md)
