--- a/docs/207/207toc.md
+++ b/docs/207/207toc.md
@@ -6,6 +6,7 @@
 + [student lab report 1](./lab%20reports/Lab_1_report.pdf)
 
 [Lab 2 - Physiology of the heart](lab_2_Heart_Physiology.md)
++ [student lab report 2](./lab%20reports/Lab_2_report.pdf)
 
 [lab 3 - Blood vessels]
 
