--- a/docs/207/207toc.md
+++ b/docs/207/207toc.md
@@ -8,7 +8,7 @@
 [Lab 2 - Physiology of the heart](lab_2_Heart_Physiology.md)
 + [student lab report 2](./lab%20reports/Lab_2_report.pdf)
 
-[lab 3 - Blood vessels]
+[lab 3 - Blood vessels](lab_3_Blood_Vessels.md)
 
 [Lab 4 - Blood](lab_4_Blood.md)
 + [student lab report 4](./lab%20reports/Lab_4_report.pdf)
