fixed link to lab safety

--- a/docs/207/207toc.md
+++ b/docs/207/207toc.md
@@ -1,6 +1,6 @@
 # BIOL 207 Labs
 
-[Lab Safety](lab_0.md)
+[Lab Safety](lab_0_Lab_Safety.md)
 
 [Lab 1 - Anatomy of the heart](./lab_1_Heart_Anatomy.md)
 + [student lab report 1](./lab%20reports/Lab_1_report.pdf)
