--- a/docs/207/207toc.md
+++ b/docs/207/207toc.md
@@ -9,6 +9,7 @@
 + [student lab report 2](./lab%20reports/Lab_2_report.pdf)
 
 [lab 3 - Blood vessels](lab_3_Blood_Vessels.md)
++ [student lab report 3](./lab%20reports/Lab_3_report.pdf)
 
 [Lab 4 - Blood](lab_4_Blood.md)
 + [student lab report 4](./lab%20reports/Lab_4_report.pdf)
