feat: add Lab 9 report and update table of contents with report links

--- a/docs/206/206toc.md
+++ b/docs/206/206toc.md
@@ -27,5 +27,7 @@
 + [student lab report EMG](./lab_reports/Lab_report_emg.pdf)
 
 [Lab 8 - Brain and Cranial Nerves](./lab_8.md)
++ [student lab report 8](./lab_reports/Lab_8_report.pdf)
 
 [Lab 9 - Special Senses](./lab_9.md)
++ [student lab report 9](./lab_reports/Lab_9_report.pdf)
