new lab format for lab 0 and 1

--- a/docs/206/206toc.md
+++ b/docs/206/206toc.md
@@ -1,6 +1,6 @@
 # BIOL 206 Labs
 
-[Lab Safety](lab_0.md)
+[Lab Intro and Safety](lab_0.md)
 
 [Lab 1 - Anatomical Terminology](lab_1.md)
 + [student lab report 1](./lab_reports/Lab_1_report.pdf)
